--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -3,11 +3,12 @@
 .topbar {
   width: 100%;
   height: 70px;
-  background-color: $mainColor;
-  color: white;
+  background-color: white;
+  color: $mainColor;
   position: fixed;
   top: 0;
   z-index: 2;
+  transition: all 1s ease;
 
   .wrapper {
     padding: 10px 30px;
@@ -57,7 +58,7 @@
       span {
         width: 100%;
         height: 3px;
-        background-color: white;
+        background-color: $mainColor;
         transform-origin: left;
         transition: all 2s ease;
       }
@@ -74,11 +75,9 @@
           background-color: white;
           transform: rotate(45deg);
         }
-
         &:nth-child(2) {
           opacity: 0;
         }
-
         &:last-child {
           background-color: white;
           transform: rotate(-45deg);
