--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,8 +1,13 @@
 @import "../../global.scss";
 
 .intro {
-  background-color: white;
+  background-color: $mainColor;
   display: flex;
+
+  @include mobile{
+    flex-direction: column;
+    align-items: center;
+  }
 
   .left {
     flex: 0.5;
@@ -18,9 +23,16 @@
       justify-content: center;
       float: right;
 
+      @include mobile{
+        align-items: flex-start;
+      }
+
       img {
         height: 90%;
 
+        @include mobile{
+          height: 50%;
+        }
       }
     }
   }
@@ -36,24 +48,48 @@
       flex-direction: column;
       justify-content: center;
 
+      @include mobile{
+        padding-left: 0;
+        align-items: center;
+      }
+
       h1 {
         font-size: 60px;
+        color: $whiteColor;
         margin: 10px 0;
 
+        @include mobile{
+          font-size: 40px;
+        }
       }
       h2 {
         font-size: 35px;
+        color: $whiteColor;
       }
       h3 {
         font-size: 30px;
+        color: $whiteColor;
+
+        @include mobile{
+          font-size: 20px;
+        }
 
         span {
           font-size: inherit;
-          color: crimson;
+          color: $secondColor;
         }
 
         .ityped-cursor {
           animation: blink 1s infinite;
+        }
+
+        @keyframes blink {
+            50%{
+                opacity: 1;
+            }
+            100%{
+                opacity: 0;
+            }
         }
       }
     }
