--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -7,7 +7,11 @@
   align-items: center;
 
   h1 {
-    font-size: 70px;
+    font-size: 50px;
+
+    @include mobile{
+      font-size: 20px;
+    }
   }
 
   ul {
@@ -15,18 +19,11 @@
     padding: 0;
     list-style: none;
     display: flex;
-  }
 
-  li {
-    font-size: 16px;
-    margin-right: 50px;
-    padding: 7px;
-    border-radius: 10px;
-    cursor: pointer;
-
-    &.active{
-      background-color:$mainColor;
-      color: white;
+    @include mobile{
+      margin: 10px 0;
+      flex-wrap: wrap;
+      justify-content: center;
     }
   }
 
@@ -36,6 +33,10 @@
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+
+    @include mobile{
+      width: 100%;
+    }
 
     .item {
       width: 220px;
@@ -51,10 +52,14 @@
       transition: all .5s ease;
       cursor: pointer;
 
+      @include mobile{
+        width: 130px;
+        height: 100px;
+      }
+
       h3 {
         position: absolute;
         font-size: 20px;
-        text-align: center;
       }
 
       img {
