--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -1,5 +1,7 @@
-.works{
-  background-color: crimson;
+@import "../../global.scss";
+
+.works {
+  background-color: $mainColor;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -10,30 +12,40 @@
     position: absolute;
     cursor: pointer;
 
-    &.left{
+    @include mobile {
+      display: none;
+    }
+
+    &.left {
       left: 100px;
       transform: rotateY(180deg);
     }
 
-    &.right{
+    &.right {
       right: 100px;
     }
   }
 
-  .slider{
-    height: 350px;
+  .slider {
+    height: 500px;
     display: flex;
     position: absolute;
     left: 0;
     transition: all 1s ease-out;
-    
+
+    @include mobile {
+      height: 100vh;
+      flex-direction: column;
+      justify-content: center;
+    }
+
     .container {
       width: 100vw;
       display: flex;
       align-items: center;
       justify-content: center;
 
-      .item{
+      .item {
         width: 700px;
         height: 100%;
         background-color: white;
@@ -41,58 +53,83 @@
         display: flex;
         align-items: center;
         justify-content: center;
-      }
-      .left{
-        flex: 4;
-        height: 80%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
 
-        .leftContainer{
-          width: 90%;
-          height: 70%;
+        @include mobile {
+          width: 80%;
+          height: 150px;
+          margin: 15px 0;
+        }
+
+        .left {
+          flex: 4;
+          height: 80%;
           display: flex;
-          flex-direction: column;
-          justify-content: space-between;
+          align-items: center;
+          justify-content: center;
 
-          .imgContainer{
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            background-color: rgb(245, 179, 155);
+          .leftContainer {
+            width: 90%;
+            height: 70%;
             display: flex;
-            align-items: center;
-            justify-content: center;
+            flex-direction: column;
+            justify-content: space-between;
 
-            img {
-              width: 25px;
+            .imgContainer {
+              width: 40px;
+              height: 40px;
+              border-radius: 50%;
+              background-color: rgb(245, 179, 155);
+              display: flex;
+              align-items: center;
+              justify-content: center;
+
+              @include mobile {
+                width: 20px;
+                height: 20px;
+              }
+
+              img {
+                width: 25px;
+
+                @include mobile {
+                  width: 15px;
+                }
+              }
+            }
+            h2 {
+              font-size: 20px;
+
+              @include mobile{
+                font-size: 13px;
+              }
+            }
+            p {
+              font-size: 13px;
+              @include mobile{
+                display: none;
+              }
+            }
+            span {
+              font-size: 12px;
+              font-weight: 600;
+              text-decoration: underline;
+              cursor: pointer;
             }
           }
-          h2 {
-            font-size: 20px;
-          }
-          p {
-            font-size: 15px;
-          }
-          span {
-            font-size: 12px;
-            font-weight: 600;
-            text-decoration: underline;
+        }
+        .right {
+          flex: 8;
+          height: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          overflow: hidden;
+
+          img {
+            width: 400px;
+            transform: rotate(-10deg);
           }
         }
-      }
-      .right{
-        flex: 8;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        overflow: hidden;
-      }
-      img {
-        width: 400px;
-        transform: rotate(-10deg);
       }
     }
   }
