--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,81 +1,41 @@
-@import "../../global.scss";
+.p {
+  width: 30%;
+  height: 40vh;
+  margin: 20px 10px;
+  border: 2px solid grey;
+  border-radius: 10px 10px 0px 0px;
+  overflow: hidden;
+}
 
-.portfolio {
-  background-color: white;
+.p-browser {
+  height: 30px;
+  background-color: grey;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  position: sticky;
+  z-index: 2;
+}
 
-  h1 {
-    font-size: 50px;
+.p-circle {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  margin: 3px;
+  background-color: white;
+}
 
-    @include mobile{
-      font-size: 20px;
-    }
-  }
+.p-img {
+  width: 100%;
+  transition: all 10s ease;
+}
 
-  ul {
-    margin: 10px;
-    padding: 0;
-    list-style: none;
-    display: flex;
+.p:hover .p-img {
+  transform: translateY(-100%);
+}
 
-    @include mobile{
-      margin: 10px 0;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-  }
-
-  .container {
-    width: 70%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-
-    @include mobile{
-      width: 100%;
-    }
-
-    .item {
-      width: 220px;
-      height: 150px;
-      border-radius: 20px;
-      border: 1px solid rgb(240, 239, 239);
-      margin: 10px 20px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      position: relative;
-      transition: all .5s ease;
-      cursor: pointer;
-
-      @include mobile{
-        width: 130px;
-        height: 100px;
-      }
-
-      h3 {
-        position: absolute;
-        font-size: 20px;
-      }
-
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        z-index: 1;
-      }
-
-      &:hover {
-        background-color: $mainColor;
-        img {
-          opacity: 0.2;
-          z-index: 0;
-        }
-      }
-    }
+@media screen and (max-width: 480px) {
+  .p {
+    width: 40%;
+    height: 20vh;
   }
 }
