--- a/src/components/portfolioList/portfoliolist.scss
+++ b/src/components/portfolioList/portfoliolist.scss
@@ -1,18 +1,41 @@
-@import "../../global.scss";
+.portfolio{
+  background-color: white;
+}
 
-.portfolioList {
-  font-size: 14px;
-  margin-right: 50px;
-  padding: 7px;
-  border-radius: 10px;
-  cursor: pointer;
+.title{
+    position: relative;
+    text-align: center;
+    font-size: 50px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    overflow: hidden;
+}
 
-  @include mobile{
-    margin-right: 20px;
-  }
+.pl {
+  padding: 50px 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
 
-  &.active {
-    background-color: $mainColor;
-    color: white;
-  }
+.pl-texts {
+  width: 65%;
+}
+
+.pl-title {
+  font-size: 50px;
+  font-weight: 600;
+}
+
+.pl-desc {
+  margin: 20px 0px;
+}
+
+.pl-list {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
