--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,3 +1,5 @@
+@import "../../global.scss";
+
 .about {
   background-color: white;
   display: flex;
@@ -52,7 +54,7 @@
 
   .title::after{
       position: absolute;
-      bottom: -8px;
+      bottom: -4px;
       left: 50%;
       font-size: 20px;
       color: crimson;
@@ -86,18 +88,18 @@
   }
   .about-content .right a{
       display: inline-block;
-      background: crimson;
+      background: $mainColor;
       color: #fff;
       font-size: 20px;
       font-weight: 500;
       padding: 10px 30px;
       margin-top: 20px;
       border-radius: 6px;
-      border: 2px solid crimson;
+      border: 2px solid $mainColor;
       transition: all 0.3s ease;
   }
   .about-content .right a:hover{
-      color: crimson;
+      color: black;
       background: none;
   }
 }
