--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,7 +1,7 @@
 @import "../../global.scss";
 
 .contact {
-  background-color: white;
+  background-color: $mainColor;
   display: flex;
 
   @include mobile {
