--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,41 +1,68 @@
-.p {
-  width: 30%;
-  height: 40vh;
-  margin: 20px 10px;
-  border: 2px solid grey;
-  border-radius: 10px 10px 0px 0px;
-  overflow: hidden;
-}
+@import "../../global.scss";
 
-.p-browser {
-  height: 30px;
-  background-color: grey;
+.portfolio{
+  background-color: $mainColor;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  position: sticky;
-  z-index: 2;
-}
 
-.p-circle {
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  margin: 3px;
-  background-color: white;
-}
+  h1{
+    font-size: 50px;
+  }
 
-.p-img {
-  width: 100%;
-  transition: all 10s ease;
-}
+  ul{
+    margin: 10px;
+    padding: 0;
+    list-style: none;
+    display: flex;
+  }
 
-.p:hover .p-img {
-  transform: translateY(-100%);
-}
+  li{
+    font-size: 18px;
+    margin-right: 50px;
+    border-radius: 10px;
+    padding: 7px;
+    cursor: pointer;
+    color: red;
 
-@media screen and (max-width: 480px) {
-  .p {
-    width: 40%;
-    height: 20vh;
+    &.active{
+      background-color: $whiteColor;
+    }
+  }
+  .container{
+    width: 100%;
+    display: flex;
+
+    .item{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: red;
+      position: relative;
+      transition: all .5s ease;
+      cursor: pointer;
+
+      h3{
+        position: absolute;
+        font-size: 30px;
+        color: white;
+        z-index: 0;
+      }
+
+      img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: 1;
+      }
+
+      &:hover{
+        background-color: $secondColor;
+        img{
+          opacity: 0.2;
+          z-index: 0;
+        }
+      }
+    }
   }
 }
