--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -23,7 +23,7 @@
     border-radius: 10px;
     padding: 7px;
     cursor: pointer;
-    color: red;
+    color: black;
 
     &.active{
       background-color: $whiteColor;
