--- a/src/components/portfolioList/portfoliolist.scss
+++ b/src/components/portfolioList/portfoliolist.scss
@@ -6,9 +6,9 @@
   border-radius: 10px;
   padding: 7px;
   cursor: pointer;
-  color: red;
+  color: $secondColor;
 
   &.active{
-    background-color: $whiteColor;
+    background-color: #f0f0f0;
   }
 }
