--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -6,131 +6,58 @@
   align-items: center;
   justify-content: center;
   position: relative;
+}
 
-  .arrow {
-    height: 50px;
-    position: absolute;
-    cursor: pointer;
+.scrollText {
+  font-size: 1.5rem;
+}
 
-    @include mobile {
-      display: none;
-    }
+.card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.25rem;
+  height: 10rem;
+  text-align: center;
+  border-radius: 10px;
+  height:80%;
+}
 
-    &.left {
-      left: 100px;
-      transform: rotateY(180deg);
-    }
+.parallax {
+  margin-right: 15%;
+}
 
-    &.right {
-      right: 100px;
-    }
+.sticky {
+  margin-left: 10%;
+}
+
+.left-img{
+  width: 32%;
+}
+
+.blue {
+  background-color: #5b65ad;
+  color: white;
+}
+
+.purple {
+  background-color: #9d65d0;
+}
+
+.red {
+  background-color: red;
+}
+
+@media (max-width: 750px) {
+  .card {
+    width: 40%;
   }
 
-  .slider {
-    height: 500px;
-    display: flex;
-    position: absolute;
-    left: 0;
-    transition: all 1s ease-out;
+  .parallax {
+    margin-right: 1.5rem;
+  }
 
-    @include mobile {
-      height: 100vh;
-      flex-direction: column;
-      justify-content: center;
-    }
-
-    .container {
-      width: 100vw;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-
-      .item {
-        width: 700px;
-        height: 100%;
-        background-color: white;
-        border-radius: 20px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        @include mobile {
-          width: 80%;
-          height: 150px;
-          margin: 15px 0;
-        }
-
-        .left {
-          flex: 4;
-          height: 80%;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-
-          .leftContainer {
-            width: 90%;
-            height: 70%;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-
-            .imgContainer {
-              width: 40px;
-              height: 40px;
-              border-radius: 50%;
-              background-color: rgb(245, 179, 155);
-              display: flex;
-              align-items: center;
-              justify-content: center;
-
-              @include mobile {
-                width: 20px;
-                height: 20px;
-              }
-
-              img {
-                width: 25px;
-
-                @include mobile {
-                  width: 15px;
-                }
-              }
-            }
-            h2 {
-              font-size: 20px;
-
-              @include mobile{
-                font-size: 13px;
-              }
-            }
-            p {
-              font-size: 13px;
-              @include mobile{
-                display: none;
-              }
-            }
-            span {
-              font-size: 12px;
-              font-weight: 600;
-              text-decoration: underline;
-              cursor: pointer;
-            }
-          }
-        }
-        .right {
-          flex: 8;
-          height: 100%;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          overflow: hidden;
-
-          img {
-            width: 400px;
-            transform: rotate(-10deg);
-          }
-        }
-      }
-    }
+  .sticky {
+    margin-left: 1.5rem;
   }
 }
