--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -2,7 +2,7 @@
 
 .portfolio{
   background-color: $mainColor;
-  display: flex;
+  text-align: center;
   flex-direction: column;
   align-items: center;
 
@@ -15,42 +15,50 @@
     padding: 0;
     list-style: none;
     display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 15px;
   }
 
   .container{
     width: 100%;
     display: flex;
 
-    .item{
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: red;
-      position: relative;
-      transition: all .5s ease;
+  }
+}
+
+.container2{
+  width: 100%;
+  height: auto;
+  text-align: center;
+
+  .title_portfolio{
+    padding-bottom: 15px;
+  }
+
+  .formation_portfolio{
+    padding-top: 10px;
+    font-size: 20px;
+  }
+
+  img{
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    padding-bottom: 10%;
+  }
+  .cta-links{
+    font-size: 25px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+
+    a{
+      text-decoration: none;
+      color: #2997ff;
       cursor: pointer;
-
-      h3{
-        position: absolute;
-        font-size: 30px;
-        color: white;
-        z-index: 0;
-      }
-
-      img{
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        z-index: 1;
-      }
-
-      &:hover{
-        background-color: $secondColor;
-        img{
-          opacity: 0.2;
-          z-index: 0;
-        }
-      }
+      padding-right: 2%;
     }
   }
 }
