--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -1,63 +1,172 @@
 @import "../../global.scss";
-
-.works {
-  background-color: $mainColor;
+.container{
   display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-}
 
-.scrollText {
-  font-size: 1.5rem;
 }
-
-.card {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.25rem;
-  height: 10rem;
+h1{
+  font-size: 50px;
   text-align: center;
-  border-radius: 10px;
-  height:80%;
+  padding-bottom: 50px;
 }
 
-.parallax {
-  margin-right: 15%;
+.section {
+  display: flex;
+  justify-content: center;
+  padding-left: 75px;
+}
+.wall {
+  display: flex;
 }
 
-.sticky {
-  margin-left: 10%;
+.wall-right {
+  display: flex;
+  flex-direction: row-reverse;
+  padding-left: 150px;
 }
-
-.left-img{
-  width: 32%;
+.v-boxes {
+  display: flex;
+  flex-direction: column;
+  &:not(:first-child){
+    margin-left: -75px;
+  }
 }
-
-.blue {
-  background-color: #5b65ad;
-  color: white;
+.second {
+  margin-top: 75px;
 }
-
-.purple {
-  background-color: #9d65d0;
+.third {
+  margin-top: 150px;
 }
-
-.red {
-  background-color: red;
+.forth {
+  margin-top: 225px;
 }
-
-@media (max-width: 750px) {
-  .card {
-    width: 40%;
+.box {
+  width: 100px;
+  height: 100px;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  transform: rotate(45deg);
+  margin: 25px;
+  cursor: pointer;
+  &:hover{
+   &:not(.link) > .box-face, > .box-back {
+     transform: translateZ(100px) rotateX(180deg);
+     background-color: transparent!important;
+    }
+    &:not(.link) > .box-face > .box-text {
+      opacity: 0;
+    }
+    & .tooltip {
+      visibility: visible;
+      opacity: 1;
+    }
+    &.link > .box-face {
+      background-color: transparent!important;
+      & > .box-text {
+        color: #323232;
+      }
+    }
   }
 
-  .parallax {
-    margin-right: 1.5rem;
+  &.link {
+    & > .box-face {
+      background-color: #323232;
+      border: 1px solid #323232;
+      box-sizing: border-box;
+      transition: background-color .5s;
+    }
+    & .box-text {
+      color: #efefef;
+      transition: color .5s;
+    }
   }
+}
 
-  .sticky {
-    margin-left: 1.5rem;
-  }
+.box-face, .box-back {
+  position: absolute;
+  top:0;
+  z-index:1;
+  width: 100px;
+  height: 100px;
+  background-color: #dedede;
+  -webkit-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  transform: rotate(90deg);
+  transform-style: preserver-3d;
+  -webkit-transform-style: preserver-3d;
+  -moz-transform-style: preserver-3d;
+  transition: transform 1s, background-color 0s .3s;
+}
+
+.box-face .box-text {
+  padding-right: 20px;
+  padding-bottom: 20px;
+  text-align: center;
+  font-size: 40px;
+  color: #bababa;
+  -webkit-transform: rotate(-135deg);
+  -ms-transform: rotate(-135deg);
+  -moz-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+  transition: opacity 0s linear .3s;
+}
+
+.box-back .box-text {
+  position: absolute;
+  top: 50%;
+  left: 10%;
+  text-align: center;
+  font-size: 14px;
+  color: #636363;
+  -webkit-transform: rotate(-135deg);
+  -ms-transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+  transform: rotate(-135deg) rotateY(180deg);
+  transition: opacity 0s linear .3s;
+}
+
+.box-back {
+  z-index:0;
+  background-image: linear-gradient( #fff, #efefef);
+}
+
+.box-text img {
+  max-width: 32px;
+  max-height: 32px;
+  -webkit-filter: grayscale(100%) saturate(0);
+  filter: grayscale(100%) saturate(0);
+  opacity: .5;
+}
+
+.tooltip {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  bottom: 26px;
+    left: 35px;
+  width: 70px;
+  font-size: 13px;
+  color: #000;
+  text-align: center;
+  border-top: 1px solid rgba(0,0,0,.8);
+  padding: 5px 0;
+  z-index: 1000;
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: visibility 0s linear .3s, opacity 1s linear .3s;
+}
+
+.tooltip:after {
+  position: absolute;
+  top: -5px;
+  left: 35px;
+  content:' ';
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid black;
 }
