--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -1,8 +1,4 @@
 @import "../../global.scss";
-.container{
-  display: flex;
-
-}
 h1{
   font-size: 50px;
   text-align: center;
@@ -18,11 +14,6 @@ h1{
   display: flex;
 }
 
-.wall-right {
-  display: flex;
-  flex-direction: row-reverse;
-  padding-left: 150px;
-}
 .v-boxes {
   display: flex;
   flex-direction: column;
@@ -83,6 +74,7 @@ h1{
 }
 
 .box-face, .box-back {
+  cursor: pointer;
   position: absolute;
   top:0;
   z-index:1;
@@ -144,7 +136,7 @@ h1{
   opacity: 0;
   position: absolute;
   bottom: 26px;
-    left: 35px;
+  left: 35px;
   width: 70px;
   font-size: 13px;
   color: #000;
