--- a/src/components/portfolioList/portfoliolist.scss
+++ b/src/components/portfolioList/portfoliolist.scss
@@ -8,6 +8,10 @@
   cursor: pointer;
   color: $secondColor;
 
+  @include mobile{
+  margin: 0;
+  }
+
   &.active{
     background-color: #f0f0f0;
   }
