--- a/src/global.scss
+++ b/src/global.scss
@@ -3,6 +3,7 @@ $secondColor: #111;
 $whiteColor: black;
 
 $width: 768px;
+$width_phone: 1380px;
 
 
 //  Education
@@ -13,6 +14,12 @@ $bdrs: 6px;
 
 @mixin mobile {
     @media (max-width: #{$width}){
+        @content
+    }
+}
+
+@mixin tablet {
+    @media (max-width: #{$width_phone}){
         @content
     }
 }
