--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -3,6 +3,7 @@ h1{
   font-size: 50px;
   text-align: center;
   padding-bottom: 50px;
+  color: $text-color;
 }
 
 .section {
@@ -80,7 +81,7 @@ h1{
   z-index:1;
   width: 100px;
   height: 100px;
-  background-color: #dedede;
+  background-color: $taupe;
   -webkit-transform: rotate(90deg);
   -ms-transform: rotate(90deg);
   -moz-transform: rotate(90deg);
