--- a/src/global.scss
+++ b/src/global.scss
@@ -1,6 +1,10 @@
 $mainColor : white;
 $secondColor: #111;
 $whiteColor: black;
+$taupe : #392E2C;
+$background: #D5CABC;
+$salmon-color: #C8574D;
+$text-color: #560905;
 
 $width: 768px;
 $width_phone: 1380px;
