--- a/src/components/portfolioList/portfoliolist.scss
+++ b/src/components/portfolioList/portfoliolist.scss
@@ -6,13 +6,15 @@
   border-radius: 10px;
   padding: 7px;
   cursor: pointer;
-  color: $secondColor;
+  color: $text-color;
+
 
   @include mobile{
   margin: 0;
   }
 
   &.active{
-    background-color: #f0f0f0;
+    background-color: $salmon-color;
+    color: white;
   }
 }
