--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -3,7 +3,7 @@
 .topbar {
   width: 100%;
   height: 70px;
-  background-color: $mainColor;
+  background-color: $background;
   color: $mainColor;
   position: fixed;
   top: 0;
@@ -83,7 +83,7 @@
   }
 
   &.active {
-    background-color: $secondColor;
+    background-color: $taupe;
     color: white;
 
     .hamburger {
