--- a/src/components/teams/teams.scss
+++ b/src/components/teams/teams.scss
@@ -66,6 +66,7 @@
       text-transform: uppercase;
       margin-bottom: 10px;
       color: $text-color;
+      font-weight: 500;
     }
     .service_descr{
       font-size: 16px;
