--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,4 +1,4 @@
-@import "../../global.scss";
+@import '../../global.scss';
 
 .about {
   background-color: $background;
@@ -6,22 +6,22 @@
   flex-direction: column;
   align-items: center;
 
-  p{
+  p {
     color: $text-color;
     font-size: 20px;
   }
 
-  .about-content{
+  .about-content {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
   }
 
-  .max-width{
-      max-width: 1300px;
-      padding: 0 80px;
-      margin: 50px auto;
+  .max-width {
+    max-width: 1300px;
+    padding: 0 80px;
+    margin: 50px auto;
   }
 
   .about .about-content .left {
@@ -30,82 +30,83 @@
 
   .about-content .right {
     width: 55%;
-}
-
-  .title{
-      position: relative;
-      text-align: center;
-      font-size: 50px;
-      font-weight: 500;
-      margin-bottom: 60px;
-      padding-bottom: 20px;
-      overflow: hidden;
   }
 
-  .title::after{
-      content: "who i am";
+  .title {
+    position: relative;
+    text-align: center;
+    font-size: 50px;
+    font-weight: 500;
+    margin-bottom: 60px;
+    padding-bottom: 20px;
+    overflow: hidden;
   }
 
-  .title::before{
-      content: "";
-      position: absolute;
-      bottom: 0px;
-      left: 50%;
-      width: 180px;
-      height: 3px;
-      background: #111;
-      transform: translateX(-50%);
+  .title::after {
+    content: 'who i am';
   }
 
-  .title::after{
-      position: absolute;
-      bottom: -4px;
-      left: 50%;
-      font-size: 20px;
-      color: $salmon-color;
-      padding: 0 5px;
-      background: $background;
-      transform: translateX(-50%);
+  .title::before {
+    content: '';
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    width: 180px;
+    height: 3px;
+    background: #111;
+    transform: translateX(-50%);
   }
 
-  .about-content .left{
-      width: 45%;
+  .title::after {
+    position: absolute;
+    bottom: -4px;
+    left: 50%;
+    font-size: 20px;
+    color: $salmon-color;
+    padding: 0 5px;
+    background: $background;
+    transform: translateX(-50%);
   }
-  .about-content .left img{
-      height: 400px;
-      width: 400px;
-      object-fit: cover;
-      border-radius: 6px;
+
+  .about-content .left {
+    width: 45%;
   }
-  about-content .right{
-      width: 55%;
+  .about-content .left img {
+    height: 400px;
+    width: 400px;
+    object-fit: cover;
+    border-radius: 6px;
   }
-  .about-content .right .text{
-      font-size: 25px;
-      font-weight: 600;
-      margin-bottom: 10px;
+  about-content .right {
+    width: 55%;
   }
-  .about-content .right .text span{
-      color: $salmon-color;
+  .about-content .right .text {
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 10px;
   }
-  .about-content .right p{
-      text-align: justify;
+  .about-content .right .text span {
+    color: $salmon-color;
   }
-  .about-content .right a{
-      display: inline-block;
-      background: $salmon-color;
-      color: white;
-      font-size: 20px;
-      font-weight: 500;
-      padding: 10px 30px;
-      margin-top: 20px;
-      border-radius: 6px;
-      transition: all 0.3s ease;
-      text-decoration: none;
+  .about-content .right p {
+    text-align: justify;
+    line-height: 25px;
   }
-  .about-content .right a:hover{
-      color: white;
-      background: $taupe;
-      text-decoration: none;
+  .about-content .right a {
+    display: inline-block;
+    background: $salmon-color;
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 10px 30px;
+    margin-top: 20px;
+    border-radius: 6px;
+    transition: all 0.3s ease;
+    text-decoration: none;
+  }
+  .about-content .right a:hover {
+    color: white;
+    background: $taupe;
+    text-decoration: none;
   }
 }
