--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,22 +1,21 @@
-@import "../../global.scss";
+@import '../../global.scss';
 
-.portfolio{
+.portfolio {
   background-color: $background;
   text-align: center;
   flex-direction: column;
   align-items: center;
 
-  p{
+  p {
     color: $text-color;
   }
 
-  h1{
+  h1 {
     font-size: 50px;
     color: $text-color;
-
   }
 
-  ul{
+  ul {
     margin: 10px;
     padding: 0;
     list-style: none;
@@ -26,55 +25,55 @@
     padding-bottom: 15px;
     color: $text-color;
 
-    @include mobile{
+    @include mobile {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
     }
   }
 
-  .container{
+  .container {
     width: 100%;
     display: flex;
   }
 }
 
-.container2{
+.container2 {
   width: 100%;
   height: auto;
   text-align: center;
 
-  .title_portfolio{
+  .title_portfolio {
     padding-bottom: 15px;
   }
 
-  .formation_portfolio{
+  .formation_portfolio {
     padding-top: 10px;
     font-size: 20px;
   }
 
-  img{
+  img {
     display: block;
     margin-right: auto;
     margin-left: auto;
     padding-bottom: 10%;
 
-    @include mobile{
+    @include mobile {
       width: 100%;
     }
 
-    @include tablet{
+    @include tablet {
       width: 100%;
     }
   }
-  .cta-links{
+  .cta-links {
     font-size: 25px;
     display: flex;
     align-items: center;
     text-align: center;
     justify-content: center;
 
-    a{
+    a {
       text-decoration: none;
       color: #2997ff;
       cursor: pointer;
@@ -84,57 +83,87 @@
 }
 
 .btn-portfolio {
-    padding: 10px 20px;
-    margin-right: 50px;
-    display: block;
-    font-size: 18px;
-    background-color: $salmon-color;
-    color: white;
-    border-radius: 15px;
-    border: none;
-    cursor: pointer;
+  padding: 10px 20px;
+  margin-right: 50px;
+  display: block;
+  font-size: 18px;
+  background-color: $salmon-color;
+  color: white;
+  border-radius: 15px;
+  border: none;
+  cursor: pointer;
 
-    &:hover{
-      color: white;
-      background: $taupe;
-      text-decoration: none;
-    }
+  &:hover {
+    color: white;
+    background: $taupe;
+    text-decoration: none;
+  }
 }
 
-
-.modal_portfolio, .overlay {
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    position: fixed;
+.modal_portfolio,
+.overlay {
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
 }
 
 .overlay {
-    background: rgba(49,49,49,0.8);
+  background: rgba(49, 49, 49, 0.8);
 }
 .modal_content {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    line-height: 1.4;
-    background: #f1f1f1;
-    padding: 14px 28px;
-    border-radius: 3px;
-    width: 65%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  line-height: 1.4;
+  background: #f1f1f1;
+  padding: 30px 28px;
+  border-radius: 3px;
+  width: 65%;
+
+  .modal_project_goal{
+    display: flex;
+
+    li{
+      margin: auto;
+      padding: 10px 0px;
+    }
+  }
+
+  h1 {
+    font-size: 2.5rem;
+    text-align: center;
+    padding: 25px 0px;
+  }
 }
 
 .modal_details {
   text-align: center;
-  margin-bottom: 4rem;
-  padding-bottom: 4rem;
-  border-bottom: 1px solid grey;
+  padding-bottom: 2rem;
+  border-bottom: 1px solid $taupe;
 
-  h1{
+  h1 {
     font-size: 3.2rem;
+    padding: 0px;
+  }
+  h2 {
+    color: $salmon-color;
+    font-size: 1.5rem;
+    padding-top: 10px;
+  }
+  p {
+    font-size: 1.3rem;
+    padding: 10px 0;
+  }
+  span {
+    font-weight: 500;
+    color: $salmon-color;
+    font-size: 1.2rem;
+    cursor: pointer;
   }
 }
 
@@ -145,34 +174,30 @@
 .modal_description {
   margin-top: 2rem;
   font-size: 1.6rem;
-  font-style: italic;
 }
 
 .modal_text {
-  padding: 0 4rem;
-  margin-bottom: 4rem;
-  font-size: 1.6rem;
-  line-height: 2;
+  font-size: 1.2rem;
 }
 
 .close_modal {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    padding: 5px 7px;
-    border-radius: 100%;
-    border: 1px solid hsla(0, 0%, 100%, 0);
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 5px 7px;
+  border-radius: 100%;
+  border: 1px solid hsla(0, 0%, 100%, 0);
 
-    background: transparent;
-    font-size: 2.4rem;
-    letter-spacing: .2rem;
+  background: transparent;
+  font-size: 2.4rem;
+  letter-spacing: 0.2rem;
 
-    transition: .2s;
-    cursor: pointer;
+  transition: 0.2s;
+  cursor: pointer;
 }
 
 .close_modal:hover,
 .close_modal:focus {
   border-color: hsla(0, 0%, 100%, 0);
-  transform: translateY(-.2rem);
+  transform: translateY(-0.2rem);
 }
