--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -26,7 +26,7 @@
         text-decoration: none;
         color: inherit;
         margin-right: 40px;
-        color: $whiteColor;
+        color: $text-color;
 
         a{
             color: #fff;
@@ -35,7 +35,7 @@
         }
 
         span{
-            color: $secondColor;
+            color: $salmon-color;
             transition: all 0.3s ease;
         }
       }
@@ -53,11 +53,13 @@
         .icon {
           font-size: 18px;
           margin-right: 5px;
+          color: $salmon-color;
         }
 
         span {
           font-size: 15px;
           font-weight: 400;
+          color: $text-color;
         }
       }
     }
@@ -75,7 +77,7 @@
       span {
         width: 100%;
         height: 3px;
-        background-color: $secondColor;
+        background-color: $taupe;
         transform-origin: left;
         transition: all 2s ease;
       }
