--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -6,6 +6,12 @@
   flex-direction: column;
   align-items: center;
 
+  .tools {
+    color: $text-color;
+    text-transform: uppercase;
+    font-weight: 500;
+  }
+
   p {
     color: $text-color;
   }
@@ -45,11 +51,14 @@
 
   .title_portfolio {
     padding-bottom: 15px;
+    text-transform: uppercase;
   }
 
   .formation_portfolio {
-    padding-top: 10px;
-    font-size: 20px;
+    padding-top: 20px;
+    font-size: 25px;
+    text-transform: uppercase;
+    font-weight: 500;
   }
 
   img {
@@ -92,6 +101,7 @@
   border-radius: 15px;
   border: none;
   cursor: pointer;
+  text-transform: uppercase;
 
   &:hover {
     color: white;
