Update section about, new image and remove some error in paragraph

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -72,8 +72,8 @@
     width: 45%;
   }
   .about-content .left img {
-    height: 400px;
-    width: 400px;
+    height: auto;
+    width: auto;
     object-fit: cover;
     border-radius: 6px;
   }
