Update href react link

--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -169,7 +169,7 @@
     font-size: 1.3rem;
     padding: 10px 0;
   }
-  span {
+  a {
     font-weight: 500;
     color: $salmon-color;
     font-size: 1.2rem;
