Responsive small computer tabet max width 1224px

--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -141,6 +141,10 @@
       display: none;
     }
 
+    @include computer {
+      display: none;
+    }
+
     li {
       margin: auto;
       padding: 10px 0;
@@ -155,6 +159,10 @@
 
   .project_goal {
     @include mobile {
+      display: none;
+    }
+
+    @include computer {
       display: none;
     }
   }
