--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -20,6 +20,11 @@
       flex-direction: column;
       align-items: center;
     }
+
+    @include computer{
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   .max-width {
@@ -32,6 +37,12 @@
       padding: 0px 50px;
       margin: 50px 0px;
     }
+
+    @include computer{
+      width: 100%;
+      padding: 0px 50px;
+      margin: 50px 0px;
+    }
   }
 
   .about .about-content .left {
@@ -40,6 +51,10 @@
 
   .about-content .right {
     width: 55%;
+
+    @include computer{
+      width: 100%;
+    }
   }
 
   .title {
@@ -84,6 +99,11 @@
     @include mobile{
       width: 100%;
     }
+
+    @include computer{
+      width: 100%;
+      text-align: center;
+    }
   }
   .about-content .left img {
     height: auto;
@@ -94,6 +114,12 @@
     @include mobile{
       height: 100%;
       width: 100%;
+      padding-bottom: 50px;
+    }
+
+    @include computer{
+      height: 50%;
+      width: 50%;
       padding-bottom: 50px;
     }
   }
@@ -107,6 +133,10 @@
 
     @include mobile{
       width: 100%;
+    }
+
+    @include computer{
+      text-align: center;
     }
   }
   .about-content .right .text span {
@@ -130,6 +160,10 @@
 
     @include mobile{
       font-size: 18px;
+    }
+
+    @include computer{
+      text-align: center;
     }
   }
   .about-content .right a:hover {
