--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -9,6 +9,11 @@
     align-items: center;
   }
 
+  @include computer{
+    flex-direction: column;
+    align-items: center;
+  }
+
   .left {
     flex: 0.5;
     overflow: hidden;
@@ -23,6 +28,12 @@
 
       @include mobile{
         align-items: flex-start;
+      }
+
+      @include computer{
+        align-items: flex-start;
+        width: 100%;
+        height: 100%;
       }
 
       img {
