--- a/src/global.scss
+++ b/src/global.scss
@@ -7,6 +7,7 @@ $salmon-color: #C8574D;
 $text-color: #560905;
 
 $width: 768px;
+$width_computer: 1224px;
 $width_phone: 1380px;
 
 
@@ -18,6 +19,12 @@ $bdrs: 6px;
 
 @mixin mobile {
     @media (max-width: #{$width}){
+        @content
+    }
+}
+
+@mixin computer {
+    @media (max-width: #{$width_computer}){
         @content
     }
 }
