Translate Section Intro with i18next and modify css for title

--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -90,6 +90,8 @@
         span {
           font-size: inherit;
           color: $salmon-color;
+          padding-left: 15px;
+          text-transform: uppercase;
         }
 
         .ityped-cursor {
