Translate Section About with i18next remove Use Effect and add some css

--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -141,6 +141,8 @@
   }
   .about-content .right .text span {
     color: $salmon-color;
+    text-transform: uppercase;
+    padding-left: 10px;
   }
   .about-content .right p {
     text-align: justify;
