Change all colors for my website

--- a/src/app.scss
+++ b/src/app.scss
@@ -9,7 +9,7 @@
   .sections{
     width: 100%;
     height: calc(100vh - 70px);
-    background-color: #D5CABC;
+    background-color: #FFFFFF;
     position: relative;
     top: 70px;
     scroll-behavior: smooth;
