--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -170,7 +170,7 @@
   }
   .about-content .right a:hover {
     color: white;
-    background: $taupe;
+    background: $hover-button;
     text-decoration: none;
   }
 }
