--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -34,7 +34,7 @@
 
     .btn_top_bar:hover {
       color: white;
-      background: $taupe;
+      background: #427AA1;
       text-decoration: none;
     }
 
