--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -104,7 +104,7 @@
 
   &:hover {
     color: white;
-    background: $taupe;
+    background: $hover-button;
     text-decoration: none;
   }
 }
@@ -181,6 +181,7 @@
     font-size: 1.2rem;
     cursor: pointer;
     text-transform: uppercase;
+    font-weight: 800;
   }
 }
 
