--- a/src/components/teams/teams.scss
+++ b/src/components/teams/teams.scss
@@ -3,85 +3,18 @@
 .teams {
   box-sizing: border-box;
 
-  h1 {
-    color: $text-color;
-  }
-
-  .services_section {
-    padding: 35px 0;
-
   img {
-    text-align: center;
-    margin: auto;
-    display: flex;
-    }
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 
-    .inner_width {
+    @include mobile{
       width: 100%;
-      max-width: 1200px;
-      margin: auto;
-      padding: 0 20px;
-      overflow: hidden;
-      @include mobile {
-        padding: 0 0;
-      }
     }
 
-    .services_container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-
-    .service_box {
-      max-width: 40.33%;
-      padding: 10px;
-      text-align: center;
-      color: #ddd;
-      cursor: pointer;
-      color: black;
-      @include mobile {
-        max-width: 50%;
-      }
-    }
-
-    .service_icon {
-      display: inline-block;
-      width: 70px;
-      height: 70px;
-      border: 3px solid $taupe;
-      color: $taupe;
-      transform: rotate(45deg);
-      margin-bottom: 30px;
-      margin-top: 16px;
-      transition: 0.3s linear;
-
-      .icon_top {
-        transform: rotate(-45deg);
-        font-size: 35px;
-        position: relative;
-        padding-right: 15px;
-        padding-top: 15px;
-      }
-    }
-
-    .service_box:hover .service_icon {
-      background-color: $salmon-color;
-      border: $salmon-color;
-      color: #ddd;
-    }
-
-    .service_title {
-      font-size: 18px;
-      text-transform: uppercase;
-      margin-bottom: 10px;
-      color: $text-color;
-      font-weight: 500;
-    }
-
-    .service_descr {
-      font-size: 16px;
-      color: $text-color;
+    @include computer{
+      width: 100%;
     }
   }
 }
