--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -4,7 +4,6 @@
   background-color: $background;
   display: flex;
 
-
   p {
     color: $text-color;
     font-size: 20px;
@@ -15,13 +14,11 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-
-    @include mobile{
+    @include mobile {
       flex-direction: column;
       align-items: center;
     }
-
-    @include computer{
+    @include computer {
       flex-direction: column;
       align-items: center;
     }
@@ -31,17 +28,15 @@
     max-width: 1300px;
     padding: 0 80px;
     margin: 50px auto;
-
-    @include mobile{
+    @include mobile {
       width: 100%;
-      padding: 0px 50px;
-      margin: 50px 0px;
+      padding: 0 50px;
+      margin: 50px 0;
     }
-
-    @include computer{
+    @include computer {
       width: 100%;
-      padding: 0px 50px;
-      margin: 50px 0px;
+      padding: 0 50px;
+      margin: 50px 0;
     }
   }
 
@@ -51,8 +46,7 @@
 
   .about-content .right {
     width: 55%;
-
-    @include computer{
+    @include computer {
       width: 100%;
     }
   }
@@ -74,7 +68,7 @@
   .title::before {
     content: '';
     position: absolute;
-    bottom: 0px;
+    bottom: 0;
     left: 50%;
     width: 180px;
     height: 3px;
@@ -87,7 +81,7 @@
     bottom: -4px;
     left: 50%;
     font-size: 20px;
-    color: $salmon-color;
+    color: $light-blue-color;
     padding: 0 5px;
     background: $background;
     transform: translateX(-50%);
@@ -95,62 +89,62 @@
 
   .about-content .left {
     width: 45%;
-
-    @include mobile{
+    @include mobile {
       width: 100%;
     }
-
-    @include computer{
+    @include computer {
       width: 100%;
       text-align: center;
     }
   }
+
   .about-content .left img {
     height: auto;
     width: auto;
     object-fit: cover;
     border-radius: 6px;
-
-    @include mobile{
+    @include mobile {
       height: 100%;
       width: 100%;
       padding-bottom: 50px;
     }
-
-    @include computer{
+    @include computer {
       height: 50%;
       width: 50%;
       padding-bottom: 50px;
     }
   }
+
   about-content .right {
     width: 55%;
   }
+
   .about-content .right .text {
     font-size: 25px;
     font-weight: 600;
     margin-bottom: 10px;
-
-    @include mobile{
+    @include mobile {
       width: 100%;
     }
-
-    @include computer{
+    @include computer {
       text-align: center;
     }
   }
+
   .about-content .right .text span {
-    color: $salmon-color;
+    color: $light-blue-color;
     text-transform: uppercase;
     padding-left: 10px;
   }
+
   .about-content .right p {
     text-align: justify;
     line-height: 25px;
   }
+
   .about-content .right a {
     display: inline-block;
-    background: $salmon-color;
+    background: $light-blue-color;
     color: white;
     font-size: 20px;
     font-weight: 500;
@@ -159,15 +153,14 @@
     border-radius: 6px;
     transition: all 0.3s ease;
     text-decoration: none;
-
-    @include mobile{
+    @include mobile {
       font-size: 18px;
     }
-
-    @include computer{
+    @include computer {
       text-align: center;
     }
   }
+
   .about-content .right a:hover {
     color: white;
     background: $hover-button;
