--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -3,7 +3,7 @@
 .menu {
   width: 300px;
   height: 100vh;
-  background-color: $taupe;
+  background-color: $blue-menu;
   position: fixed;
   top: 0;
   right: -300px;
@@ -29,11 +29,13 @@
 
     li {
       margin-bottom: 25px;
-      a{
+
+      a {
         font-size: inherit;
         color: inherit;
         text-decoration: none;
       }
+
       &:hover {
         font-weight: 500;
       }
