--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -4,7 +4,6 @@
   width: 100%;
   height: 70px;
   background-color: $background;
-  color: $mainColor;
   position: fixed;
   top: 0;
   z-index: 3;
@@ -17,7 +16,7 @@
     justify-content: space-between;
 
     .btn_top_bar {
-      background: $salmon-color;
+      background: $light-blue-color;
       color: white;
       font-size: 20px;
       font-weight: 500;
@@ -34,7 +33,7 @@
 
     .btn_top_bar:hover {
       color: white;
-      background: #427AA1;
+      background: $hover-button;
       text-decoration: none;
     }
 
@@ -48,15 +47,15 @@
         text-decoration: none;
         color: inherit;
         margin-right: 40px;
+        color: $hover-button;
 
         a {
-          color: #fff;
           font-size: 35px;
           font-weight: 600;
         }
 
         span {
-          color: $salmon-color;
+          color: $hover-button;
           transition: all 0.3s ease;
         }
       }
@@ -77,7 +76,6 @@
         @include mobile {
           display: none;
         }
-
         @include computer {
           display: none;
         }
@@ -90,7 +88,7 @@
         span {
           font-size: 15px;
           font-weight: 400;
-          color: $salmon-color;
+          color: $hover-button;
         }
       }
     }
@@ -108,7 +106,7 @@
       span {
         width: 100%;
         height: 3px;
-        background-color: $taupe;
+        background-color: $blue-menu;
         transform-origin: left;
         transition: all 2s ease;
       }
@@ -116,8 +114,8 @@
   }
 
   &.active {
-    background-color: $taupe;
-    color: $salmon-color;
+    background-color: $blue-menu;
+    color: $background;
 
     .hamburger {
       span {
