--- a/src/components/teams/teams.scss
+++ b/src/components/teams/teams.scss
@@ -2,6 +2,12 @@
 
 .teams {
   box-sizing: border-box;
+.title{
+  @include mobileS {
+    font-size: 1.6rem;
+  }
+}
+
 
   img {
     display: block;
