--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -59,6 +59,10 @@
     margin-bottom: 60px;
     padding-bottom: 20px;
     overflow: hidden;
+
+    @include mobileS {
+      font-size: 30px;
+    }
   }
 
   .title::after {
