--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -112,6 +112,10 @@
         width: 70px;
         animation: arrowBlink 2s infinite;
         color: $light-blue-color;
+
+        @include mobileS {
+          width: 35px;
+        }
       }
       @keyframes arrowBlink {
         100% {
