--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -49,6 +49,10 @@
         margin-right: 40px;
         color: $hover-button;
 
+        @include mobileS {
+          font-size: 25px;
+        }
+
         a {
           font-size: 35px;
           font-weight: 600;
@@ -57,6 +61,10 @@
         span {
           color: $hover-button;
           transition: all 0.3s ease;
+
+          @include mobileS {
+            font-size: 25px;
+          }
         }
       }
 
