Update images photoshop
Add confirmation email send

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -54,3 +54,9 @@ textarea {
 [type="submit"]:hover {
   background: $blue-menu;
 }
+
+.show_message{
+  padding-top: 15px;
+  font-weight: 500;
+  color: $light-blue-color;
+}
